packages/react-components/src/components/CategoryFacet/styles.css
.root{
  width: 100%;
}
.nested{
  padding-left: 20px;
}

.content{
  font-size: calc($facet-item-font-size * $font-size-medium);
  font-family: $facet-item-font-family;
  color: $facet-item-color;
}

.item{
  $font-size: $font-size-medium;
  $padding: 3px 0;
  width: 100%;
  border: 0;
  background: transparent;
  outline: 0;
  font-size: $font-size;
  border-radius: 0;
  text-align: left;
  padding: $padding;
  height: auto;
  cursor: pointer;
  display: table;
  & > span{
    display: table-cell;
    width: 100%;
  }
  svg {
    vertical-align: -3px;
    padding-left: 7px;
  }
}

.active{
  font-weight: bold;
}

